[package]
name = "merkle-forests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
fastcrypto = "0.1.9"
serde = "1.0.219"
bcs = "0.1.6"

[[bench]]
name = "bench"
harness = false # This line tells Cargo not to use the default test harness
